--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-12-01  Terrence Brannon  <terry@hcoop.net>
+
+	* changed "vendor" key to driver per Cavaletto
+
+	* added docs for form_dsn call.
+
 Revision history for Perl extension DBIx::DBH.
 
 0.01  Mon Nov 22 23:22:31 2004
