Import of TBONE/DBIx-DBH-0.10 from CPAN.
gitpan-cpan-distribution: DBIx-DBH
gitpan-cpan-version:      0.10
gitpan-cpan-path:         TBONE/DBIx-DBH-0.10.tar.gz
gitpan-cpan-author:       TBONE
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+
+	* Add SQLite driver (Mark Stosberg)
+
+	* Allow new drivers to published and used without modifying DBIx::DBH (Mark Stosberg)
+
 2004-12-01  Terrence Brannon  <terry@hcoop.net>
 
 	* changed "vendor" key to driver per Cavaletto
